{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 149,
  "lineage": "451d242e-865a-f303-88e3-0162b5c90412",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:242989754518:internet-gateway/igw-042acd6e762d426ae",
            "id": "igw-042acd6e762d426ae",
            "owner_id": "242989754518",
            "tags": {
              "Name": "b_plus_gw"
            },
            "tags_all": {
              "Name": "b_plus_gw"
            },
            "vpc_id": "vpc-040348a2ae3dcab53"
          },
          "dependencies": [
            "aws_vpc.b_plus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:242989754518:loadbalancer/app/example/34af37b62bb42dbf",
            "arn_suffix": "app/example/34af37b62bb42dbf",
            "dns_name": "example-587222546.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:242989754518:loadbalancer/app/example/34af37b62bb42dbf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example",
            "security_groups": [
              "sg-00f129af7d483d7e0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0171d9f233b5199f7"
              },
              {
                "subnet_id": "subnet-0a19fed691f94ebdf"
              }
            ],
            "subnets": [
              "subnet-0171d9f233b5199f7",
              "subnet-0a19fed691f94ebdf"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-040348a2ae3dcab53",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.b_plus_alb_security",
            "aws_security_group.b_plus_ecs_security",
            "aws_subnet.public_1a",
            "aws_subnet.public_1c",
            "aws_vpc.b_plus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:242989754518:listener/app/example/34af37b62bb42dbf/9df7ac280e280010",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:242989754518:targetgroup/tf-example-lb-tg/264d8c8fff8bf132",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:242989754518:listener/app/example/34af37b62bb42dbf/9df7ac280e280010",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:242989754518:loadbalancer/app/example/34af37b62bb42dbf",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_1c",
            "aws_vpc.b_plus_vpc",
            "aws_lb.example",
            "aws_lb_target_group.targetGP",
            "aws_security_group.b_plus_alb_security",
            "aws_security_group.b_plus_ecs_security",
            "aws_subnet.public_1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "targetGP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:242989754518:targetgroup/tf-example-lb-tg/264d8c8fff8bf132",
            "arn_suffix": "targetgroup/tf-example-lb-tg/264d8c8fff8bf132",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:242989754518:targetgroup/tf-example-lb-tg/264d8c8fff8bf132",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-040348a2ae3dcab53"
          },
          "dependencies": [
            "aws_vpc.b_plus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:242989754518:route-table/rtb-07ff26267217bbf22",
            "id": "rtb-07ff26267217bbf22",
            "owner_id": "242989754518",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-042acd6e762d426ae",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "b_plus_route_table"
            },
            "tags_all": {
              "Name": "b_plus_route_table"
            },
            "vpc_id": "vpc-040348a2ae3dcab53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.b_plus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0de7c758bb1e7c6",
            "route_table_id": "rtb-07ff26267217bbf22",
            "subnet_id": "subnet-0a19fed691f94ebdf"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route_table",
            "aws_subnet.public_1a",
            "aws_vpc.b_plus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0278fa0e23d309702",
            "route_table_id": "rtb-07ff26267217bbf22",
            "subnet_id": "subnet-0171d9f233b5199f7"
          },
          "dependencies": [
            "aws_subnet.public_1c",
            "aws_vpc.b_plus_vpc",
            "aws_internet_gateway.gw",
            "aws_route_table.route_table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "b_plus_alb_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:242989754518:security-group/sg-00f129af7d483d7e0",
            "description": "Allowc",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06b5a36955586af3c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-00f129af7d483d7e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "rom VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allw_tls_",
            "name_prefix": "",
            "owner_id": "242989754518",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "b_plus_ecs_security"
            },
            "tags_all": {
              "Name": "b_plus_ecs_security"
            },
            "timeouts": null,
            "vpc_id": "vpc-040348a2ae3dcab53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.b_plus_ecs_security",
            "aws_vpc.b_plus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "b_plus_ecs_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:242989754518:security-group/sg-06b5a36955586af3c",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b5a36955586af3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls_ecs",
            "name_prefix": "",
            "owner_id": "242989754518",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "b_plus_ecs_security"
            },
            "tags_all": {
              "Name": "b_plus_ecs_security"
            },
            "timeouts": null,
            "vpc_id": "vpc-040348a2ae3dcab53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.b_plus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "b_plus_rds_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:242989754518:security-group/sg-061588931ed818f09",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061588931ed818f09",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06b5a36955586af3c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_tls_rds",
            "name_prefix": "",
            "owner_id": "242989754518",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "b_plus_rds_security"
            },
            "tags_all": {
              "Name": "b_plus_rds_security"
            },
            "timeouts": null,
            "vpc_id": "vpc-040348a2ae3dcab53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.b_plus_ecs_security",
            "aws_vpc.b_plus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:242989754518:subnet/subnet-0e1334369a0a1578a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0e1334369a0a1578a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242989754518",
            "tags": {
              "Name": "b_plus_private_1a"
            },
            "tags_all": {
              "Name": "b_plus_private_1a"
            },
            "vpc_id": "vpc-040348a2ae3dcab53"
          },
          "dependencies": [
            "aws_vpc.b_plus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:242989754518:subnet/subnet-04f80177b425cf728",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-04f80177b425cf728",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242989754518",
            "tags": {
              "Name": "b_plus_private_1c"
            },
            "tags_all": {
              "Name": "b_plus_private_1c"
            },
            "vpc_id": "vpc-040348a2ae3dcab53"
          },
          "dependencies": [
            "aws_vpc.b_plus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:242989754518:subnet/subnet-0a19fed691f94ebdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0a19fed691f94ebdf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242989754518",
            "tags": {
              "Name": "b_plus_public_1a"
            },
            "tags_all": {
              "Name": "b_plus_public_1a"
            },
            "vpc_id": "vpc-040348a2ae3dcab53"
          },
          "dependencies": [
            "aws_vpc.b_plus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:242989754518:subnet/subnet-0171d9f233b5199f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0171d9f233b5199f7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "242989754518",
            "tags": {
              "Name": "b_plus_public_1c"
            },
            "tags_all": {
              "Name": "b_plus_public_1c"
            },
            "vpc_id": "vpc-040348a2ae3dcab53"
          },
          "dependencies": [
            "aws_vpc.b_plus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "b_plus_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:242989754518:vpc/vpc-040348a2ae3dcab53",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a0f5e5f81854a445",
            "default_route_table_id": "rtb-0ef42a26f9497e957",
            "default_security_group_id": "sg-00ccafe227d291632",
            "dhcp_options_id": "dopt-67f7f900",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-040348a2ae3dcab53",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ef42a26f9497e957",
            "owner_id": "242989754518",
            "tags": {
              "Name": "b_plus_vpc"
            },
            "tags_all": {
              "Name": "b_plus_vpc"
            }
          }
        }
      ]
    }
  ]
}